Fix the verbage and align the tool tip left to match other tool tips

--- a/ui/src/style/components/organizations-table.scss
+++ b/ui/src/style/components/organizations-table.scss
@@ -84,7 +84,6 @@ input[type="text"].form-control.orgs-table--input {
 .orgs-table--public {
   height: 30px;
   margin-right: 4px;
-  text-align: center;
   width: 88px;
   background-color: $g4-onyx;
   border-radius: 4px;
